[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menu/MenuLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/FFFFORWA.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="EnemySpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 1052, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 155, 432 )

[node name="MenuLayer" parent="." instance=ExtResource( 5 )]

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="enemy_created" from="EnemySpawner" to="." method="_on_EnemySpawner_enemy_created"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
